change-cms-page-and-block

--- a/files for admin/CMS Pages/careers.phtml
+++ b/files for admin/CMS Pages/careers.phtml
@@ -131,9 +131,9 @@
       <div class="careers-section__cell">
         <div class="careers-section__image">
           <img
-            loading="lazy"
-            src="{{media url='wysiwyg/careers/3Z_2009.w020.n001.635B.p15.635_Converted_1.png'}}"
-            alt=""
+              loading="lazy"
+              src="{{media url='wysiwyg/careers/3Z_2009.w020.n001.635B.p15.635_Converted_1.png'}}"
+              alt="Magento Web Design"
           />
         </div>
       </div>
@@ -153,7 +153,7 @@
         </ul>
 
         <div class="careers-section__image careers-section__image--desktop">
-          <img loading="lazy" src="{{media url='wysiwyg/careers/2109.w032.n003.103B.p1.103_Converted_1.png'}}" alt="" />
+          <img loading="lazy" src="{{media url='wysiwyg/careers/2109.w032.n003.103B.p1.103_Converted_1.png'}}" alt="Experienced Magento Developer" />
         </div>
       </div>
       <div class="careers-section__cell">
@@ -177,7 +177,7 @@
           or other goodies from the company
         </p>
         <div class="careers-section__image careers-section__image--mobile">
-          <img loading="lazy" src="{{media url='wysiwyg/careers/2109.w032.n003.103B.p1.103_Converted_1.png'}}" alt="" />
+          <img loading="lazy" src="{{media url='wysiwyg/careers/2109.w032.n003.103B.p1.103_Converted_1.png'}}" alt="Experienced Magento Developer" />
         </div>
       </div>
     </div>
@@ -196,9 +196,9 @@
           <!-- 1 -->
           <div data-role="collapsible" class="careers-collapsible__item" :class="{'active': selected == 2}">
             <div
-              data-role="trigger"
-              class="careers-collapsible__trigger"
-              @click="selected !== 2 ? selected = 2 : selected = null"
+                data-role="trigger"
+                class="careers-collapsible__trigger"
+                @click="selected !== 2 ? selected = 2 : selected = null"
             >
               <div class="careers-collapsible__header">
                 <h4 class="h4 careers-collapsible__title">Business Analyst</h4>
@@ -208,10 +208,10 @@
             </div>
           </div>
           <div
-            data-role="content"
-            style=""
-            x-ref="container2"
-            x-bind:style="selected == 2 ? 'max-height: ' + $refs.container2.scrollHeight + 'px' : ''"
+              data-role="content"
+              style=""
+              x-ref="container2"
+              x-bind:style="selected == 2 ? 'max-height: ' + $refs.container2.scrollHeight + 'px' : ''"
           >
             <div class="careers-collapsible__content">
               <div class="careers-collapsible__col">
@@ -221,9 +221,9 @@
                   will join our best Magento Team.
                 </h5>
                 <a
-                  href="#footer-alt"
-                  class="_scrollTo careers-collapsible__button careers-collapsible__button--desktop _button _button--orange-bg"
-                  style="width: fit-content"
+                    href="#footer-alt"
+                    class="_scrollTo careers-collapsible__button careers-collapsible__button--desktop _button _button--orange-bg"
+                    style="width: fit-content"
                 >
                   <span class="_button__text">Send your CV</span>
                   <span class="_button__overlay _button__overlay--hover"></span>
@@ -270,9 +270,9 @@
               </div>
 
               <a
-                href="#footer-alt"
-                class="_scrollTo careers-collapsible__button careers-collapsible__button--mobile _button _button--orange-bg"
-                style="text-align: center"
+                  href="#footer-alt"
+                  class="_scrollTo careers-collapsible__button careers-collapsible__button--mobile _button _button--orange-bg"
+                  style="text-align: center"
               >
                 <span class="_button__text">Send your CV</span>
                 <span class="_button__overlay _button__overlay--hover"></span>
@@ -284,9 +284,9 @@
           <!-- 4 -->
           <div data-role="collapsible" class="careers-collapsible__item" :class="{'active': selected == 4}">
             <div
-              data-role="trigger"
-              class="careers-collapsible__trigger"
-              @click="selected !== 4 ? selected = 4 : selected = null"
+                data-role="trigger"
+                class="careers-collapsible__trigger"
+                @click="selected !== 4 ? selected = 4 : selected = null"
             >
               <div class="careers-collapsible__header">
                 <h4 class="h4 careers-collapsible__title">Magento BackEnd Developer</h4>
@@ -296,10 +296,10 @@
             </div>
           </div>
           <div
-            data-role="content"
-            style=""
-            x-ref="container4"
-            x-bind:style="selected == 4 ? 'max-height: ' + $refs.container4.scrollHeight + 'px' : ''"
+              data-role="content"
+              style=""
+              x-ref="container4"
+              x-bind:style="selected == 4 ? 'max-height: ' + $refs.container4.scrollHeight + 'px' : ''"
           >
             <div class="careers-collapsible__content">
               <div class="careers-collapsible__col">
@@ -309,9 +309,9 @@
                   that will join our best Magento Team.
                 </h5>
                 <a
-                  href="#footer-alt"
-                  class="_scrollTo careers-collapsible__button careers-collapsible__button--desktop _button _button--orange-bg"
-                  style="width: fit-content"
+                    href="#footer-alt"
+                    class="_scrollTo careers-collapsible__button careers-collapsible__button--desktop _button _button--orange-bg"
+                    style="width: fit-content"
                 >
                   <span class="_button__text">Send your CV</span>
                   <span class="_button__overlay _button__overlay--hover"></span>
@@ -350,9 +350,9 @@
               </div>
 
               <a
-                href="#footer-alt"
-                class="_scrollTo careers-collapsible__button careers-collapsible__button--mobile _button _button--orange-bg"
-                style="text-align: center"
+                  href="#footer-alt"
+                  class="_scrollTo careers-collapsible__button careers-collapsible__button--mobile _button _button--orange-bg"
+                  style="text-align: center"
               >
                 <span class="_button__text">Send your CV</span>
                 <span class="_button__overlay _button__overlay--hover"></span>
