--- a/files for admin/CMS Pages/services.phtml
+++ b/files for admin/CMS Pages/services.phtml
@@ -17,10 +17,10 @@
     </div>
 
     <div
-      class="services-page__squares services-squares"
-      data-mage-init='{"slickServicePage":{}}'
-      itemscope
-      itemtype="https://schema.org/BreadcrumbList"
+        class="services-page__squares services-squares"
+        data-mage-init='{"slickServicePage":{}}'
+        itemscope
+        itemtype="https://schema.org/BreadcrumbList"
     >
       <div class="services-squares__square" itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem">
         <a itemprop="item" class="_scrollTo" href="#services-design-section" data-order-mob="1" data-order-desktop="1">
@@ -33,11 +33,11 @@
       </div>
       <div class="services-squares__square" itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem">
         <a
-          itemprop="item"
-          class="_scrollTo"
-          href="#services-migration-section"
-          data-order-mob="3"
-          data-order-desktop="2"
+            itemprop="item"
+            class="_scrollTo"
+            href="#services-migration-section"
+            data-order-mob="3"
+            data-order-desktop="2"
         >
           <p class="service-squares__text" itemprop="name">Magento 2 Migration</p>
         </a>
@@ -54,11 +54,11 @@
       </div>
       <div class="services-squares__square" itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem">
         <a
-          itemprop="item"
-          class="_scrollTo"
-          href="#services-optimization-section"
-          data-order-mob="7"
-          data-order-desktop="4"
+            itemprop="item"
+            class="_scrollTo"
+            href="#services-optimization-section"
+            data-order-mob="7"
+            data-order-desktop="4"
         >
           <p class="service-squares__text" itemprop="name">
             Server & Magento <br />
@@ -69,11 +69,11 @@
       </div>
       <div class="services-squares__square" itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem">
         <a
-          itemprop="item"
-          class="_scrollTo"
-          href="#services-development-section"
-          data-order-mob="2"
-          data-order-desktop="5"
+            itemprop="item"
+            class="_scrollTo"
+            href="#services-development-section"
+            data-order-mob="2"
+            data-order-desktop="5"
         >
           <p class="service-squares__text" itemprop="name">Magento Development</p>
         </a>
@@ -81,11 +81,11 @@
       </div>
       <div class="services-squares__square" itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem">
         <a
-          itemprop="item"
-          class="_scrollTo"
-          href="#services-security-section"
-          data-order-mob="5"
-          data-order-desktop="6"
+            itemprop="item"
+            class="_scrollTo"
+            href="#services-security-section"
+            data-order-mob="5"
+            data-order-desktop="6"
         >
           <p class="service-squares__text" itemprop="name">Magento Security Audit</p>
         </a>
@@ -102,12 +102,12 @@
       </div>
       <div class="services-squares__square" itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem">
         <a
-          itemprop="item"
-          class="_scrollTo"
-          href="#services-ga4-section"
-          data-order-mob="8"
-          data-order-desktop="8"
-          itemid="{{store url='services/implementation-google-analytics-4-on-magento-2-with-gtm'}}"
+            itemprop="item"
+            class="_scrollTo"
+            href="#services-ga4-section"
+            data-order-mob="8"
+            data-order-desktop="8"
+            itemid="{{store url='services/implementation-google-analytics-4-on-magento-2-with-gtm'}}"
         >
           <p class="service-squares__text" itemprop="name">Implementation<br />Google Analytics 4</p>
         </a>
@@ -116,10 +116,10 @@
     </div>
 
     <section
-      id="services-design-section"
-      class="services-page__service-section service-section"
-      itemscope
-      itemtype="https://schema.org/Product"
+        id="services-design-section"
+        class="services-page__service-section service-section"
+        itemscope
+        itemtype="https://schema.org/Product"
     >
       <div class="service-section__body _grid-3-col">
         <div class="service-section__label _section-label" itemprop="keywords">Design</div>
@@ -138,29 +138,29 @@
         </div>
         <div class="service-section__image">
           <img
-            loading="lazy"
-            src="{{media url='wysiwyg/Service/Web_design.svg'}}"
-            alt="devolope-image"
-            itemprop="logo"
+              loading="lazy"
+              src="{{media url='wysiwyg/Service/Web_design.svg'}}"
+              alt="devolope-image"
+              itemprop="logo"
           />
         </div>
       </div>
     </section>
 
     <section
-      id="services-development-section"
-      class="services-page__service-section service-section"
-      itemscope
-      itemtype="https://schema.org/Product"
+        id="services-development-section"
+        class="services-page__service-section service-section"
+        itemscope
+        itemtype="https://schema.org/Product"
     >
       <div class="service-section__body _grid-3-col">
         <div class="service-section__label _section-label" itemprop="keywords">Development</div>
         <div class="service-section__image">
           <img
-            loading="lazy"
-            src="{{media url='wysiwyg/Service/Development.svg'}}"
-            alt="design-image "
-            itemprop="logo"
+              loading="lazy"
+              src="{{media url='wysiwyg/Service/Development.svg'}}"
+              alt="design-image "
+              itemprop="logo"
           />
         </div>
         <div class="service-section__content">
@@ -180,10 +180,10 @@
     </section>
 
     <section
-      id="services-migration-section"
-      class="services-page__service-section service-section"
-      itemscope
-      itemtype="https://schema.org/Product"
+        id="services-migration-section"
+        class="services-page__service-section service-section"
+        itemscope
+        itemtype="https://schema.org/Product"
     >
       <div class="service-section__body _grid-3-col">
         <div class="service-section__label _section-label" itemprop="keywords">Migration</div>
@@ -200,20 +200,20 @@
         </div>
         <div class="service-section__image">
           <img
-            loading="lazy"
-            src="{{media url='wysiwyg/Service/migration.svg'}}"
-            alt="migration-image "
-            itemprop="logo"
+              loading="lazy"
+              src="{{media url='wysiwyg/Service/migration.svg'}}"
+              alt="migration-image "
+              itemprop="logo"
           />
         </div>
       </div>
     </section>
 
     <section
-      id="services-pwa-section"
-      class="services-page__service-section service-section"
-      itemscope
-      itemtype="https://schema.org/Product"
+        id="services-pwa-section"
+        class="services-page__service-section service-section"
+        itemscope
+        itemtype="https://schema.org/Product"
     >
       <div class="service-section__body _grid-3-col">
         <div class="service-section__label _section-label" itemprop="keywords">PWA</div>
@@ -232,10 +232,10 @@
     </section>
 
     <section
-      id="services-security-section"
-      class="services-page__service-section service-section"
-      itemscope
-      itemtype="https://schema.org/Product"
+        id="services-security-section"
+        class="services-page__service-section service-section"
+        itemscope
+        itemtype="https://schema.org/Product"
     >
       <div class="service-section__body _grid-3-col">
         <div class="service-section__label service-section__label--wide _section-label" itemprop="keywords">
@@ -258,20 +258,20 @@
         </div>
         <div class="service-section__image">
           <img
-            loading="lazy"
-            src="{{media url='wysiwyg/Service/851_Converted_1.svg'}}"
-            alt="securety-image "
-            itemprop="logo"
+              loading="lazy"
+              src="{{media url='wysiwyg/Service/851_Converted_1.svg'}}"
+              alt="securety-image "
+              itemprop="logo"
           />
         </div>
       </div>
     </section>
 
     <section
-      id="services-support-section"
-      class="services-page__service-section service-section"
-      itemscope
-      itemtype="https://schema.org/Product"
+        id="services-support-section"
+        class="services-page__service-section service-section"
+        itemscope
+        itemtype="https://schema.org/Product"
     >
       <div class="service-section__body _grid-3-col">
         <div class="service-section__label _section-label" itemprop="keywords">Support</div>
@@ -297,10 +297,10 @@
     </section>
 
     <section
-      id="services-optimization-section"
-      class="services-page__service-section service-section"
-      itemscope
-      itemtype="https://schema.org/Product"
+        id="services-optimization-section"
+        class="services-page__service-section service-section"
+        itemscope
+        itemtype="https://schema.org/Product"
     >
       <div class="service-section__body _grid-3-col">
         <div class="service-section__label _section-label" itemprop="keywords">Optimization</div>
@@ -317,16 +317,16 @@
           </ul>
         </div>
         <div class="service-section__image">
-          <img loading="lazy" src="{{media url='wysiwyg/Service/Frame.svg'}}" alt="" itemprop="logo" />
+          <img loading="lazy" src="{{media url='wysiwyg/Service/Frame.svg'}}" alt="Magento Web Development" itemprop="logo" />
         </div>
       </div>
     </section>
 
     <section
-      id="services-ga4-section"
-      class="services-page__service-section service-section"
-      itemscope
-      itemtype="https://schema.org/Product"
+        id="services-ga4-section"
+        class="services-page__service-section service-section"
+        itemscope
+        itemtype="https://schema.org/Product"
     >
       <div class="service-section__body _grid-3-col">
         <div class="service-section__label _section-label" itemprop="keywords">Analytics</div>
@@ -351,8 +351,8 @@
           </a>
         </div>
         <a
-          class="service-section__mobile"
-          href="{{store url='services/implementation-google-analytics-4-on-magento-2-with-gtm'}}"
+            class="service-section__mobile"
+            href="{{store url='services/implementation-google-analytics-4-on-magento-2-with-gtm'}}"
         >
           <button type="button" class="service-section__mobile-button _button _button--arrow" style="color: #333">
             <span class="_button__text"> Discover more </span>
