--- a/files for admin/CMS Pages/works.phtml
+++ b/files for admin/CMS Pages/works.phtml
@@ -11,7 +11,7 @@
 
     <a class="work-page__row" href="https://www.vodafone.ua/shop/" target="_blank">
       <div class="row__img work-page__image">
-        <img loading="eager" src="{{media url='wysiwyg/work/vodafone_banner.png'}}" alt="" />
+        <img loading="eager" src="{{media url='wysiwyg/work/vodafone_banner.png'}}" alt="Vodafone online store development" />
       </div>
       <div class="work-page__info">
         <h4 class="_h4">
@@ -28,7 +28,7 @@
 
     <a class="work-page__dual-top" href="https://www.ortlieb.com/" target="_blank">
       <div class="dual-top__img work-page__image">
-        <img loading="eager" src="{{media url='wysiwyg/work/ortileb_banner.png'}}" alt="" />
+        <img loading="eager" src="{{media url='wysiwyg/work/ortileb_banner.png'}}" alt="Ortlieb online store development" />
       </div>
       <div class="work-page__info">
         <h4 class="_h4">
@@ -44,7 +44,7 @@
     <!-- Dr.Berg -->
     <a class="work-page__dual-bottom" href="https://shop.drberg.com/" target="_blank">
       <div class="dual-bottom__img work-page__image">
-        <img loading="lazy" src="{{media url='wysiwyg/work/dr_berg_banner.png'}}" alt="" />
+        <img loading="lazy" src="{{media url='wysiwyg/work/dr_berg_banner.png'}}" alt="Dr Berg ecommerce development" />
       </div>
       <div class="work-page__info">
         <h4 class="_h4">
@@ -63,16 +63,16 @@
     <!-- Tefal -->
     <a class="work-page__row-reverse" href="https://shop.tefal.ua/" target="_blank">
       <div class="row-reverse__img work-page__image">
-        <img loading="lazy" src="{{media url='wysiwyg/work/tefal_banner.png'}}" alt="" />
+        <img loading="lazy" src="{{media url='wysiwyg/work/tefal_banner.png'}}" alt="Tefal online store development" />
       </div>
       <div class="work-page__info">
         <h4 class="_h4">
-          Tefal is by your side to help you get the best out of every day in the simplest manner possible. With its
-          high-performance and easy-to-use innovations, Tefal helps you to seamlessly create a home full of life.
+          Tefal
           <i class="work-page__link-mobile _link-www-icon _link-www-icon--mobile"></i>
         </h4>
         <h5 class="h5">
-          official online store of the international brand under which household appliances and dishes are produced
+          Tefal is by your side to help you get the best out of every day in the simplest manner possible. With its
+          high-performance and easy-to-use innovations, Tefal helps you to seamlessly create a home full of life.
         </h5>
         <p class="work-page__small-text">Design, development, integrations, support</p>
         <i class="work-page__link-desktop _link-www-icon"></i>
@@ -82,7 +82,7 @@
     <!-- Krups -->
     <a class="work-page__dual-top-reverse" href="https://www.krups.ua/" target="_blank">
       <div class="dual-top-reverse__img work-page__image">
-        <img loading="lazy" src="{{media url='wysiwyg/work/krups_banner.png'}}" alt="" />
+        <img loading="lazy" src="{{media url='wysiwyg/work/krups_banner.png'}}" alt="Krups online store development" />
       </div>
       <div class="work-page__info">
         <h4 class="_h4">
@@ -102,7 +102,7 @@
     <!-- Soundmag -->
     <a class="work-page__dual-bottom-reverse" href="https://soundmag.ua/" target="_blank">
       <div class="dual-bottom-reverse__img work-page__image">
-        <img loading="lazy" src="{{media url='wysiwyg/work/soundmag_banner.png'}}" alt="" />
+        <img loading="lazy" src="{{media url='wysiwyg/work/soundmag_banner.png'}}" alt="Soundmag online store development" />
       </div>
       <div class="work-page__info">
         <h4 class="_h4">
@@ -118,7 +118,7 @@
     <!-- WMF -->
     <a class="work-page__row" href="https://www.wmf.ua/" target="_blank">
       <div class="row__img work-page__image">
-        <img loading="lazy" src="{{media url='wysiwyg/work/wmf_banner.png'}}" alt="" />
+        <img loading="lazy" src="{{media url='wysiwyg/work/wmf_banner.png'}}" alt="WMF online store development" />
       </div>
       <div class="work-page__info">
         <h4 class="_h4">
@@ -138,7 +138,7 @@
     <!-- Rowenta -->
     <a class="work-page__dual-top" href="https://www.rowenta.ua/" target="_blank">
       <div class="dual-top__img work-page__image">
-        <img loading="lazy" src="{{media url='wysiwyg/work/rowenta_banner.png'}}" alt="" />
+        <img loading="lazy" src="{{media url='wysiwyg/work/rowenta_banner.png'}}" alt="Rowenta online store development" />
       </div>
       <div class="work-page__info">
         <h4 class="_h4">
@@ -157,7 +157,7 @@
     <!-- Chicco -->
     <a class="work-page__dual-bottom" href="https://chicco.com.ua/" target="_blank">
       <div class="dual-bottom__img work-page__image">
-        <img loading="lazy" src="{{media url='wysiwyg/work/chicco_banner.png'}}" alt="" />
+        <img loading="lazy" src="{{media url='wysiwyg/work/chicco_banner.png'}}" alt="Chicco ecommerce development" />
       </div>
       <div class="work-page__info">
         <h4 class="_h4">
@@ -175,7 +175,7 @@
     <!-- GoodWine -->
     <a class="work-page__row-reverse work-page__last-item" href="https://goodwine.com.ua/" target="_blank">
       <div class="row-reverse__img work-page__image">
-        <img loading="lazy" src="{{media url='wysiwyg/work/full-bottle-wine-with-copy-space_4_.png'}}" alt="" />
+        <img loading="lazy" src="{{media url='wysiwyg/work/full-bottle-wine-with-copy-space_4_.png'}}" alt="ecommerce development for food delivery store" />
       </div>
       <div class="work-page__info">
         <h4 class="_h4">
