change-cms-page

--- a/files for admin/CMS Pages/services.phtml
+++ b/files for admin/CMS Pages/services.phtml
@@ -246,7 +246,26 @@
                         experience on mobile, and much more. Our extensive experience building Magento PWA stores will ensure your
                         headless eCommerce store is ahead of the competition.
                     </p>
+                    <a href="{{store url='services/magento-pwa'}}">
+                        <button type="button" class="service-section__button _button _button--arrow" style="color: #333">
+                            <span class="_button__text"> Discover more </span>
+                            <span class="_button__text-overlay" style="clip: rect(0px, 0px, 24px, 0px)"> Discover more </span>
+                            <span class="_button__overlay _button__overlay--hover"></span>
+                            <span class="_button__overlay _button__overlay--active"></span>
+                        </button>
+                    </a>
                 </div>
+                <a
+                        class="service-section__mobile"
+                        href="/services/magento-pwa"
+                >
+                    <button type="button" class="service-section__mobile-button _button _button--arrow" style="color: #333">
+                        <span class="_button__text"> Discover more </span>
+                        <span class="_button__text-overlay" style="clip: rect(0px, 0px, 24px, 0px)"> Discover more </span>
+                        <span class="_button__overlay _button__overlay--hover"></span>
+                        <span class="_button__overlay _button__overlay--active"></span>
+                    </button>
+                </a>
             </div>
         </section>
 
