change pages services

--- a/files for admin/CMS Pages/services.phtml
+++ b/files for admin/CMS Pages/services.phtml
@@ -135,6 +135,14 @@
                             to learn more about how a good user experience and interface impact your online sales.
                         </p>
                     </div>
+                    <a href="{{store url='services/comprehensive-web-design'}}">
+                        <button type="button" class="service-section__button _button _button--arrow" style="color: #333">
+                            <span class="_button__text"> Discover more </span>
+                            <span class="_button__text-overlay" style="clip: rect(0px, 0px, 24px, 0px)"> Discover more </span>
+                            <span class="_button__overlay _button__overlay--hover"></span>
+                            <span class="_button__overlay _button__overlay--active"></span>
+                        </button>
+                    </a>
                 </div>
                 <div class="service-section__image">
                     <img
@@ -144,6 +152,17 @@
                             itemprop="logo"
                     />
                 </div>
+                <a
+                        class="service-section__mobile"
+                        href="{{store url='services/comprehensive-web-design'}}"
+                >
+                    <button type="button" class="service-section__mobile-button _button _button--arrow" style="color: #333">
+                        <span class="_button__text"> Discover more </span>
+                        <span class="_button__text-overlay" style="clip: rect(0px, 0px, 24px, 0px)"> Discover more </span>
+                        <span class="_button__overlay _button__overlay--hover"></span>
+                        <span class="_button__overlay _button__overlay--active"></span>
+                    </button>
+                </a>
             </div>
         </section>
 
@@ -216,6 +235,14 @@
                         postponing the procedure indefinitely. After years of using Magento 1, many grew attached to the familiar
                         features and demonstrated the platform's robustness.
                     </p>
+                    <a href="{{store url='services/migration-to-magento-2'}}">
+                        <button type="button" class="service-section__button _button _button--arrow" style="color: #333">
+                            <span class="_button__text"> Discover more </span>
+                            <span class="_button__text-overlay" style="clip: rect(0px, 0px, 24px, 0px)"> Discover more </span>
+                            <span class="_button__overlay _button__overlay--hover"></span>
+                            <span class="_button__overlay _button__overlay--active"></span>
+                        </button>
+                    </a>
                 </div>
                 <div class="service-section__image">
                     <img
@@ -225,6 +252,17 @@
                             itemprop="logo"
                     />
                 </div>
+                <a
+                        class="service-section__mobile"
+                        href="{{store url='services/migration-to-magento-2'}}"
+                >
+                    <button type="button" class="service-section__mobile-button _button _button--arrow" style="color: #333">
+                        <span class="_button__text"> Discover more </span>
+                        <span class="_button__text-overlay" style="clip: rect(0px, 0px, 24px, 0px)"> Discover more </span>
+                        <span class="_button__overlay _button__overlay--hover"></span>
+                        <span class="_button__overlay _button__overlay--active"></span>
+                    </button>
+                </a>
             </div>
         </section>
 
@@ -349,7 +387,27 @@
                             different-sized eCommerce stores all over the globe.
                         </p>
                     </div>
+                    <a href="{{store url='services/magento-support'}}">
+                        <button type="button" class="service-section__button _button _button--arrow" style="color: #333">
+                            <span class="_button__text"> Discover more </span>
+                            <span class="_button__text-overlay" style="clip: rect(0px, 0px, 24px, 0px)"> Discover more </span>
+                            <span class="_button__overlay _button__overlay--hover"></span>
+                            <span class="_button__overlay _button__overlay--active"></span>
+                        </button>
+                    </a>
                 </div>
+                <a
+                        class="service-section__mobile"
+                        href="{{store url='services/magento-support'}}"
+                >
+                
+                    <button type="button" class="service-section__mobile-button _button _button--arrow" style="color: #333">
+                        <span class="_button__text"> Discover more </span>
+                        <span class="_button__text-overlay" style="clip: rect(0px, 0px, 24px, 0px)"> Discover more </span>
+                        <span class="_button__overlay _button__overlay--hover"></span>
+                        <span class="_button__overlay _button__overlay--active"></span>
+                    </button>
+                </a>
             </div>
         </section>
 
